# Real-Time-Twitter-Classification-and-Trend-Detection

./: README copy.md  README.md  preprocess.py  simulate_stream.py  stream.py  vector_output.py  vectorize.py
model/: __init__.py  bert_model.py  etl.py  main.py  nb_model.py  plot_analysis.py  pyproject.toml  requirements.txt  setup.py
model/project_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
topic_model/: plot_perplexity.py  plot_topics.py  readme.md  topic_model.py
